--- a/TodoList/Views/Todo/Create.cshtml
+++ b/TodoList/Views/Todo/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Add a note </h1>
+<h1 class="display-4">Add a note </h1>
 
 <hr />
 <div class="row">
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Destriptions" class="control-label"></label>
-                <input asp-for="Destriptions" class="form-control" />
+                <textarea asp-for="Destriptions" class="form-control"></textarea>
                 <span asp-validation-for="Destriptions" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
