--- a/TodoList/Views/Todo/Delete.cshtml
+++ b/TodoList/Views/Todo/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="display-4">Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TodoModel</h4>
     <hr />
     <dl class="row">
 
@@ -33,7 +32,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a class=" btn btn-dark" asp-action="Index">Back to List</a>
     </form>
 </div>
