--- a/TodoList/Views/Todo/Details.cshtml
+++ b/TodoList/Views/Todo/Details.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class=" display-4">Details</h1>
 
 <div>
-    <h4>TodoModel</h4>
-    <hr />
+    <hr/>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.TaskId }) |
-    <a asp-action="Index">Back to List</a>
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.TaskId }, new { @class ="btn btn-warning"})
+    <a class=" btn btn-dark" asp-action="Index">Back to List</a>
 </div>
