--- a/TodoList/Views/Todo/Edit.cshtml
+++ b/TodoList/Views/Todo/Edit.cshtml
@@ -4,27 +4,27 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="display-4">Edit</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-                <div class="form-group">
-                    <label asp-for="Destriptions" class="control-label"></label>
-                    <input asp-for="Destriptions" class="form-control" />
-                    <span asp-validation-for="Destriptions" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ReleaseDate" class="control-label"></label>
-                    <input asp-for="ReleaseDate" class="form-control" />
-                    <span asp-validation-for="ReleaseDate" class="text-danger"></span>
-                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Destriptions" class="control-label"></label>
+                <textarea asp-for="Destriptions" class="form-control"></textarea>
+                <span asp-validation-for="Destriptions" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ReleaseDate" class="control-label"></label>
+                <input asp-for="ReleaseDate" class="form-control" />
+                <span asp-validation-for="ReleaseDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
