--- a/TodoList/Views/Todo/Edit.cshtml
+++ b/TodoList/Views/Todo/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1 class="display-4">Edit</h1>
+<h1 class="display-2">Edit</h1>
 
 <hr />
 <div class="row">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a class="btn btn-dark" asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
