--- a/TodoList/Views/Todo/Create.cshtml
+++ b/TodoList/Views/Todo/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1 class="display-4">Add a note </h1>
+<h1 class="display-2">Add a note </h1>
 
 <hr />
 <div class="row">
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <textarea asp-for="Name" class="form-control"></textarea> 
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a class="btn btn-dark" asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
