--- a/TodoList/Views/Todo/Delete.cshtml
+++ b/TodoList/Views/Todo/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1 class="display-4">Delete</h1>
+<h1 class="display-2">Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -33,6 +33,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a class=" btn btn-dark" asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
     </form>
 </div>
