--- a/TodoList/Views/Todo/Details.cshtml
+++ b/TodoList/Views/Todo/Details.cshtml
@@ -31,5 +31,5 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new {  id = Model.TaskId }, new { @class ="btn btn-warning"})
-    <a class=" btn btn-dark" asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
